Update pixel theme 2nd generation.theme.css

--- a/pixel theme 2nd generation.theme.css
+++ b/pixel theme 2nd generation.theme.css
@@ -4,7 +4,16 @@
 * @description A Fully Modified NotAnotherAnime Theme
 * @author SirLagsAlot
 * @website https://betterdiscord.app/theme/NotAnotherAnimeTheme
+
+__**For Plugins:**__
+**1.NotAnotherAnime(LimeShark)(Fully Modified)
+**2.Horizontal Server List
+**3.Radial Status
+**4.Custom Font (Google.com)(M PLUS Rounded 1c)
+**Note:This is my first time making a my css file go public,I'm not sure if it'll work on your devices
+**plugins are listed below
 */
+
 @import url("https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css");
 @import url('https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c');
 @import url('https://codedotspectra.github.io/themes/core/custom-font.css');
