Update pixel theme 2nd generation.theme.css

--- a/pixel theme 2nd generation.theme.css
+++ b/pixel theme 2nd generation.theme.css
@@ -12,6 +12,8 @@ __**For Plugins:**__
 **4.Custom Font (Google.com)(M PLUS Rounded 1c)
 **Note:This is my first time making a my css file go public,I'm not sure if it'll work on your devices
 **plugins are listed below
+
+**Don't ask for the first generation,it's a lag machine
 */
 
 @import url("https://puckzxz.github.io/NotAnotherAnimeTheme/build/v3/naat.v3.css");
